[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-sm"
version = "1.3.0"
authors = [
    { name="Jumpei Sakatsu", email="saka2jp@gmail.com" },
]
description = "A Python wrapper around the AWS Secrets Manager using Boto3"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "boto3~=1.16"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "flake8-isort",
    "flake8-polyfill",
    "radon",
    "twine",
    "pytest-mock"
]
